[project]
name = "tah"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "tbongkim03", email = "tbongkim03@gmial.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[project.scripts]
my-history = 'tah.cli:cmd'

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/tbongkim03/tah"
Issues = "https://github.com/tbongkim03/tah/issues"
